# gecko-dev

./: .gitignore  dune  dune-project
browser/app/: mozilla.in
calendar/sunbird/app/: mozilla.in
composer/app/: mozilla.in
db/sqlite3/src/: alter.c  attach.c  auth.c  btree.c  btree.h  build.c  date.c  delete.c  experimental.c  expr.c  func.c  hash.c  hash.h  insert.c  legacy.c  main.c  pager.c  pager.h  pragma.c  random.c  select.c  shell.c  sqlite3.h  sqliteInt.h  tclsqlite.c  tokenize.c  update.c  utf.c  util.c  vacuum.c  vdbe.c  vdbe.h  where.c
extensions/xml-rpc/idl/: nsIXmlRpcClient.idl
extensions/xml-rpc/src/: nsXmlRpcClient.js
gfx/cairo/cairo/src/: cairo-wideint.c  cairo-wideint.h
gfx/cairo/libpixman/src/: fbedge.c  icpixels.c  ictrap.c  pixman.h
js/src/: Makefile.ref  config.mk  dune  jsconfig.mk  jsnum.c
js/src/config/: WINNT-MinGW-Cygwin-10.0.mk  WINNT-MinGW-Cygwin-6.0.mk  WINNT-MinGW-Cygwin-6.1.mk  WINNT-MinGW-MSYS-5.1.mk  WINNT-MinGW.mk  WINNT5.2.mk
js/src/fdlibm/: Makefile.ref
mail/app/: mozilla.in
modules/plugin/base/public/: npapi.h
nsprpub/pkg/linux/: Makefile.in
nsprpub/pkg/solaris/SUNWprd/: prototype
security/manager/ssl/src/: nsPKCS12Blob.cpp  nsPKCS12Blob.h
security/nss/cmd/pp/: pp.c
security/nss/cmd/pwdecrypt/: pwdecrypt.c
security/nss/cmd/shlibsign/: shlibsign.c
security/nss/cmd/ssltap/: ssltap.c
security/nss/cmd/zlib/: adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  zconf.h  zutil.c  zutil.h
xpfe/bootstrap/: mozilla.in
xulrunner/app/: mozilla.in
(+142 files in other folders)
